# CV500

./: .gitignore  README.md  pyproject.toml  requirements.txt
cv500/: __init__.py  cli.py  specs.py
cv500/commands/: __init__.py  fetch_filings.py  liquidity.py  monthly_scan.py  p0_check.py  p2_5.py  regime.py  screen_ingest.py  triage_pack.py  vault_audit.py
cv500/core/: __init__.py  crawl.py  fiscal.py  manifest.py  naming.py  needsdata.py  numeric.py  pdfval.py  provenance.py  report.py
tests/: test_crawl_guard.py  test_fetch_classify.py  test_fiscal.py  test_naming.py  test_numeric.py  test_p2_5.py  test_screen_ingest.py
